# bot-discord-rust

./: Cargo.toml
src/: main.rs
src/commands/: mod.rs
src/commands/misc/: ping.rs
src/events/: guild_member_add.rs  guild_member_remove.rs  join_to_create.rs
src/handler/: handler.rs
src/handlers/: handler.rs
src/utils/: create_embed.rs  mod.rs
