[package]
name = "bot-discord-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.76"
rand = "0.8.5"
reqwest = "0.11.23"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "model",
    "cache",
    "rustls_backend",
    "gateway",
] }
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
shuttle-serenity = { version = "0.35.2", default-features = false, features = [
    "serenity-0-12-rustls_backend",
] }
songbird = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
